# PrivacyPlugin

./: build.gradle  readme.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/yooha/privacyplugin/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  sandhook_native.cpp
app/src/main/cpp/archs/arm/arm64/hook/: hook_arm64.cpp  hook_arm64.h
app/src/main/cpp/elf/: elf.cpp
app/src/main/cpp/stack/: stack.cpp  stack.h
app/src/main/cpp/utils/: log.h
app/src/main/java/com/yooha/privacyplugin/: EntryHook.java  MainActivity.java
app/src/main/java/com/yooha/privacyplugin/Common/: Data.java
app/src/main/java/com/yooha/privacyplugin/Hook/Anti/: HookAnti.java
app/src/main/java/com/yooha/privacyplugin/Hook/Base/: HookHelper.java  HookInterface.java  HookMethods.java
app/src/main/java/com/yooha/privacyplugin/Hook/Binder/: HookBinderProxy.java
app/src/main/java/com/yooha/privacyplugin/Hook/Bluetooth/: HookBluetoothAdapter.java  HookBluetoothDevice.java
app/src/main/java/com/yooha/privacyplugin/Hook/Camera/: HookCamera.java
app/src/main/java/com/yooha/privacyplugin/Hook/Clipboard/: HookClipboardManager.java
app/src/main/java/com/yooha/privacyplugin/Hook/Content/: HookContentProviderClient.java  HookContentProviderProxy.java  HookContentResolver.java
app/src/main/java/com/yooha/privacyplugin/Hook/Env/: HookEnvironment.java
app/src/main/java/com/yooha/privacyplugin/Hook/Location/: HookCdmaCellLocation.java  HookGsmCellLocation.java  HookLocation.java  HookLocationManager.java
app/src/main/java/com/yooha/privacyplugin/Hook/Media/: HookMediaDrm.java
app/src/main/java/com/yooha/privacyplugin/Hook/Net/: HookInetAddress.java  HookNetworkInfo.java  HookNetworkInterface.java  HookWifiInfo.java  HookWifiManager.java
app/src/main/java/com/yooha/privacyplugin/Hook/Other/: HookActivity.java  HookActivityThread.java  HookContextIml.java
app/src/main/java/com/yooha/privacyplugin/Hook/PM/: HookActivityManager.java  (+2 more)
app/src/main/java/com/yooha/privacyplugin/Msg/: HookMessage.java  MsgSender.java
app/src/main/java/com/yooha/privacyplugin/Util/: LogUtil.java
app/src/main/java/com/yooha/privacyplugin/Xposed/: YH_MethodHook.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/yooha/privacyplugin/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
